--- a/UnaDificilDecision.ini
+++ b/UnaDificilDecision.ini
@@ -8,9 +8,9 @@ difficulty=0.7
 lengthmin=120
 lengthmax=180
 image=relatos_horror_cosmico.jpg
-version=C5-E4-72-45-E8-85-55-96-8C-FF-48-16-02-DF-AC-E5-5D-CD-62-91-5D-8B-F0-93-38-7B-F2-4E-5E-A4-31-31
-name.Spanish=Una difícil decisión 
+version=D2-FA-7B-60-7B-DE-A4-61-32-24-C1-23-F5-FD-EA-62-E0-F1-58-8C-29-2B-82-93-87-E0-49-AB-82-2B-29-25
+name.Spanish=Una difícil decisión v1.0
 synopsys.Spanish=El doctor Hoover ha realizado un descubrimiento asombroso que quiere compartir con vosotros
-description.Spanish=Recibís una carta de vuestro amigo el Doctor Hoover, en la que os invita a acudir a su mansión para mostraros un descubrimiento asombroso que cambiará la forma de entender  el mundo para siempre.También os pide que guardéis una llave de plata que se encuentra en el interior del sobre, la cual abre su despacho.\n\nEste escenario sólo requiere el juego base. Tened en cuenta que tiene combates, es narrativo y está pensado para ser jugado entre 2 y 5 jugadores.   NO ESTÁ RECOMENDADO PARA NIÑOS debido a la naturaleza de la historia. Os aconsejo encarecidamente que prestéis mucha atención a lo que sucede para que podáis conseguir el mejor final de los 6 posibles.\n\nMi agradecimiento a FernandoEsra y M Vidimus, por su ayuda con la app, testear el escenario y sus aportaciones para mejorarlo.
+description.Spanish=Recibís una carta de vuestro amigo el Doctor Hoover, en la que os invita a acudir a su mansión para mostraros un descubrimiento asombroso que cambiará la forma de entender  el mundo para siempre.También os pide que guardéis una llave de plata que se encuentra en el interior del sobre, la cual abre su despacho.\n\nEste escenario sólo requiere el juego base. Tened en cuenta que tiene combates, es narrativo y está pensado para ser jugado entre 2 y 5 jugadores.  \n\nNO ESTÁ RECOMENDADO PARA NIÑOS debido a la naturaleza de la historia. \n\nOs aconsejo encarecidamente que prestéis mucha atención a lo que sucede para que podáis conseguir el mejor final de los 6 posibles.\n\nMi agradecimiento a FernandoEsra y Vidimus, por su ayuda con la app, testear el escenario y sus aportaciones para mejorarlo.
 authors.Spanish=Reiv
 authors_short.Spanish=Reiv
